# bugbite

./: .gitignore  Doxyfile  README.md
.github/workflows/: docs.yml  firmware-ci.yml  pages.yml  provisioner-ci.yml
firmware/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-c3-supermini
firmware/include/: config.hpp
firmware/src/: CMakeLists.txt  build.cpp  build.hpp  main.cpp  setup.cpp  setup.hpp
firmware/src/connectivity/config/domain/: i_device_config.hpp  i_mqtt_config.hpp  i_wifi_config.hpp
firmware/src/connectivity/config/infrastructure/: flash_device_config.cpp  flash_device_config.hpp  flash_mqtt_config.cpp  flash_mqtt_config.hpp  flash_wifi_config.cpp  (+1 more)
firmware/src/connectivity/mqtt/: mqtt.cpp  mqtt.hpp  tag.hpp
firmware/src/connectivity/provisioning/: provisioning.cpp  provisioning.hpp  tag.hpp
firmware/src/connectivity/wifi/: tag.hpp  wifi.cpp  wifi.hpp
firmware/src/peripherals/digital_actuator/: digital_actuator.cpp  digital_actuator.hpp  tag.hpp
firmware/src/peripherals/flash_memory/: flash_memory.cpp  flash_memory.hpp  tag.hpp
firmware/src/peripherals/led/: led.cpp  led.hpp  tag.hpp
firmware/src/peripherals/relay/: relay.cpp  relay.hpp  tag.hpp
include/: config.hpp  secrets.hpp.example
provisioner/: .gitignore  Makefile  README.md  pyproject.toml
provisioner/src/: .env.example  main.py
provisioner/src/config/: __init__.py  config.py  logger.py
src/: main.cpp
src/peripherals/: digital_output.cpp  digital_output.hpp  led.cpp  led.hpp  relay.cpp  relay.hpp
(+26 files in other folders)
