[project]
name = "provisioner"
version = "0.1.0-alpha.1"
description = "CLI tool to write device configuration into ESP32 flash memory via NVS partition"
requires-python = ">=3.14"
dependencies = [
    "esp-idf-nvs-partition-gen>=0.2.0",
    "esptool>=5.3.0",
    "jupyterlab>=4.5.7",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]
